created form for root page but api request for airport codes returns acao header error

--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -13,7 +13,7 @@
       <label for="origin__input">Origin</label>
       <input class="form-control" id="origin__input" placeholder="Miami, New York...">
     </div>
-    <button type="submit" class="btn btn-default">Click to see airports in your area</button>
+    <button id="origin__submit" class="btn btn-default">Click to see airports in your area</button>
   </form>
 </div>
 
@@ -21,9 +21,9 @@
   <h5>Where are you flying to?</h5>
   <form class="destination__form">
     <div class="form-group">
-      <label for="destination__input">Origin</label>
+      <label for="destination__input">Destination</label>
       <input class="form-control" id="destination__input" placeholder="Toyko, London...">
     </div>
-    <button type="submit" class="btn btn-default">Click to see airports around that area</button>
+    <button id="destination__submit" type="submit" class="btn btn-default">Click to see airports around that area</button>
   </form>
 </div>
