--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -6,20 +6,20 @@
   <h3>Welcome to Artie's Airfare Search. Where you can search through all the flights in the world!!! </h3>
 </div>
 
-<div class="container">
-  <h5>Where are you flying from?</h5>
-  <form class="origin__form">
+<div class="container ">
+  <h4>Where are you flying from?</h4>
+  <form class="origin__form input_con">
     <div class="form-group">
       <label for="origin__input">Origin</label>
       <input class="form-control" id="origin__input" placeholder="Miami, New York...">
     </div>
-    <button id="origin__submit" class="btn btn-default">Click to see airports in your area</button>
+    <button id="origin__submit" class="btn btn-default">Click to see airports around that area</button>
   </form>
 </div>
 
-<div class="container">
-  <h5>Where are you flying to?</h5>
-  <form class="destination__form">
+<div class="container ">
+  <h4>Where are you flying to?</h4>
+  <form class="destination__form input_con">
     <div class="form-group">
       <label for="destination__input">Destination</label>
       <input class="form-control" id="destination__input" placeholder="Toyko, London...">
