root page has all the inputs and airport selection is working

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -7,3 +7,12 @@
 .input_con{
   margin-bottom: 50px;
 }
+.container li:hover{
+  background: red;
+}
+.container li:active{
+  background: blue;
+}
+.container li:visited{
+  background: green;
+}
