--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -6,24 +6,38 @@
   <h3>Welcome to Artie's Airfare Search. Where you can search through all the flights in the world!!! </h3>
 </div>
 
-<div class="container ">
+<div class="container" id="origin">
   <h4>Where are you flying from?</h4>
   <form class="origin__form input_con">
     <div class="form-group">
-      <label for="origin__input">Origin</label>
       <input class="form-control" id="origin__input" placeholder="Miami, New York...">
     </div>
-    <button id="origin__submit" class="btn btn-default">Click to see airports around that area</button>
+    <button id="origin__submit" class="btn btn-default">Search airports in that area</button>
   </form>
 </div>
 
-<div class="container ">
+<div class="container" id="destination">
   <h4>Where are you flying to?</h4>
   <form class="destination__form input_con">
     <div class="form-group">
-      <label for="destination__input">Destination</label>
       <input class="form-control" id="destination__input" placeholder="Toyko, London...">
     </div>
-    <button id="destination__submit" type="submit" class="btn btn-default">Click to see airports around that area</button>
+    <button id="destination__submit" type="submit" class="btn btn-default">Search airports in that area</button>
+  </form>
+</div>
+
+<div class="container">
+  <form class="search__form">
+    <div class="form-group">
+      <label for="origin__location">Origin</label>
+      <input class="form-control" id="origin__location">
+
+      <label for="destination__location">Destination</label>
+      <input class="form-control" id="destination__location">
+
+      <label for="date">When?</label> <br>
+      <input type="date" data-date-picker="true" id="date"/>
+    </div>
+    <button id="search__submit" class="btn btn-default">Search flights</button>
   </form>
 </div>
